Gate complete native publication and include sources, notices, and usage documentation